2. sound(bgm/bugpull) 코드수정
- volume아이콘 눌러야 bgm control되는 문제 해결 
- bugpull sound 위치 수정

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <!-- <img src="img/carrot.png" alt="당근" class="item carrot"> -->
         </div>
         <div class="volume">
-            <i class="fas fa-volume-up" onclick="sound_bgm.pause();"></i>
-            <i class="fas fa-volume-mute hide" onclick="sound_bgm.play();"></i>
+            <i class="fas fa-volume-up"></i>
+            <i class="fas fa-volume-mute hide"></i>
         </div>
         <div class="game_message hide">
             <i class="fas fa-redo"></i>
