--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>당근뽑기 게임</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/51005d41ce.js" crossorigin="anonymous"></script>
-    <script src="main.js" defer></script>
+    <!-- 모듈 import, export 사용하게 때문에 type써주기 -->
+    <script type="module" src="src/main.js" defer></script>
 </head>
 <body>
     <section class="game_wrap">
